--- a/frontend/user-management/src/app/components/users/users.component.html
+++ b/frontend/user-management/src/app/components/users/users.component.html
@@ -40,9 +40,9 @@
             <button mat-icon-button color="primary" (click)="editUser(element)" *appRolePermission="'edit_user_form'" >
                 <mat-icon>edit</mat-icon>
               </button>
-           <!-- <button mat-icon-button color="secondary" (click)="deleteRole(element)">
+           <button mat-icon-button color="secondary" (click)="deleteUser(element)">
             <mat-icon>delete</mat-icon>
-          </button> -->
+          </button>
         </td>
       </ng-container>
   
