--- a/frontend/user-management/src/app/components/roles/roles.component.html
+++ b/frontend/user-management/src/app/components/roles/roles.component.html
@@ -30,9 +30,9 @@
             <button mat-icon-button color="primary" (click)="editRole(element)"  *appRolePermission="'edit_role_form'">
                 <mat-icon>edit</mat-icon>
               </button>
-           <!-- <button mat-icon-button color="secondary" (click)="deleteRole(element)" >
+           <button mat-icon-button color="secondary" (click)="deleteRole(element)" >
             <mat-icon>delete</mat-icon>
-          </button> -->
+          </button>
         </td>
       </ng-container>
   
