--- a/frontend/user-management/src/styles.css
+++ b/frontend/user-management/src/styles.css
@@ -33,6 +33,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background: #673ab7;
 }
 
+.primary {
+    color: #673ab7;
+}
+
 .w-20 {
     width: 20%;
 }
@@ -76,4 +80,18 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-size: 36px !important;
     color: white;
     margin-bottom: 4rem !important;
+}
+
+.header-main {
+    font-size: 36px !important;
+    margin-bottom: 4rem !important;
+}
+
+.header-secondary {
+    font-size: 32px !important;
+    margin-bottom: 4rem !important;
+    font-weight: 500;
+}
+.center {
+    text-align: center;
 }
